--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,7 @@
 DATABASE_URL="postgresql://USERNAME:PASSWORD@HOST:PORT/sprintsync"
+
 SECRET_KEY=YOUR_SECRET_HERE
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+OPENAI_KEY=
