--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ black==25.1.0
 certifi==2025.6.15
 click==8.2.1
 Deprecated==1.2.18
+distro==1.9.0
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.14
@@ -17,12 +18,14 @@ httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
+jiter==0.10.0
 limits==5.4.0
 Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mypy_extensions==1.1.0
+openai==1.92.3
 packaging==25.0
 passlib==1.7.4
 pathspec==0.12.1
@@ -46,6 +49,7 @@ slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
+tqdm==4.67.1
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
